--- a/classes/class01/presentation/upr2.tex
+++ b/classes/class01/presentation/upr2.tex
@@ -14,7 +14,7 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 
-\title{Работно заглавие}
+\title{Въведение в Базите данни. Основни понятия и концепции.}
 \author{Валентин Гелински}
 \institute{ТУ София}
 \date{\today} 
@@ -23,6 +23,19 @@
 \begin{document}
   \begin{frame} 
     \titlepage
+  \end{frame}
+
+  \begin{frame}
+    \frametitle{За курса}
+    \begin{itemize}
+      \item{Оценяване}
+      \item{Курсови задачи}
+    \end{itemize}
+  \end{frame}
+
+  \begin{frame}
+    \frametitle{Въведение в базите данни}
+    
   \end{frame}
 \end{document}
 
