renamed file and added second slide

--- a/classes/class01/presentation/class01.tex
+++ b/classes/class01/presentation/class01.tex
@@ -35,7 +35,20 @@
 
   \begin{frame}
     \frametitle{Въведение в базите данни}
-    
+    \framesubtitle{Или защо си усложняваме живота}
+    \begin{itemize}
+      \item{Оптимизация по обем (памет)}
+      \item{Оптимизация по скорост}
+      \item{Консистентност на данните}
+      \item{Независимост от кода на програмата}
+      \item{Сигурност}
+    \end{itemize}
+  \end{frame}
+
+  \begin{frame}
+    \frametitle{СУБД}
+    \framesubtitle{Database Managment System}
+    \includegraphics[width=250px]{img/rdbms}
   \end{frame}
 \end{document}
 
